New files to test

--- a/index.html
+++ b/index.html
@@ -134,16 +134,7 @@
     <template id="scene1">
       <a-entity>
         <!-- Skybox con textura personalizada -->
-        <a-sky src="assets/skybox.png"></a-sky>
-
-        <!-- Ocean -->
-        <a-ocean
-          width="50"
-          depth="50"
-          density="40"
-          opacity="1"
-          position="0 0 0"
-        ></a-ocean>
+        <a-sky color="lightblue"></a-sky>
 
         <!-- White Clouds -->
 
