--- a/test.html
+++ b/test.html
@@ -416,7 +416,7 @@
         ></a-entity>
       </a-entity>
 
-      <!-- Invisible plane for collisions (optional) moved slightly up to match ground -->
+      <!-- 1Invisible plane for collisions (optional) moved slightly up to match ground -->
       <a-entity
         id="floor"
         geometry="primitive: plane; width: 100; height: 100"
